--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yapi-plugin-auth2",
-  "version": "1.1.1",
+  "name": "yapi-plugin-ouath2",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
